<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_login" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_layout_border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:id="@+id/activity_login_username_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_username_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"
            android:textColor="@color/color_333333"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/font_size_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_layout_border"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:id="@+id/activity_login_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:lines="1"
            android:imeOptions="actionDone"
            android:textColor="@color/color_333333"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/font_size_16" />

    </LinearLayout>

    <cn.longmaster.ihmonitor.view.LoadingButton
        android:id="@+id/activity_login_confirm_btn"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_confirm_blue"
        app:pbLoadingText="@string/login_logining"
        app:pbText="@string/sure"
        app:pbTextColor="@color/white"
        app:pbTextSize="@dimen/font_size_18" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/activity_login_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_version_grey"
        android:paddingBottom="3dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="3dp"
        android:text="@string/version_num"
        android:textColor="@color/color_666666" />

</LinearLayout>
