<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_logout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/title_dialog_tip"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:text="@string/login_make_sure_logout"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/font_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="22dp"
            android:background="@color/color_666666"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_logout_cancle_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/cancel"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_14" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/color_666666" />

            <TextView
                android:id="@+id/dialog_logout_confirm_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/confirm"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>