<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_dialog_white_corners"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_update_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="13.33dp"
                android:layout_marginRight="13.33dp"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:singleLine="false"
                android:text="@string/version_new_found"
                android:textColor="@color/color_app_main_color"
                android:textSize="@dimen/font_size_16" />

            <View
                style="@style/horizontal_line_light_1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />

            <TextView
                android:id="@+id/dialog_update_latest_version_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/version_latest"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/dialog_update_latest_size_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_update_latest_version_tv"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/version_latest_size"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/dialog_update_latest_feature_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_update_latest_size_tv"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/version_latest_feature"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/dialog_update_latest_feature_list_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_update_latest_feature_tv"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.6"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/color_666666"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/horizontal_line_light_1"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_update_latest_left_button_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:background="@drawable/bg_dialog_btn_bottom_left_white_corners"
                android:textColor="@color/text_color_808080_white"
                android:textSize="@dimen/font_size_16" />

            <View
                android:id="@+id/layout_common_dialog_line_view"
                style="@style/vertical_line_light_1"
                android:visibility="visible" />

            <TextView
                android:id="@+id/dialog_update_latest_right_button_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:background="@drawable/bg_dialog_btn_bottom_right_white_corners"
                android:textColor="@color/text_color_157efb_white"
                android:textSize="@dimen/font_size_16"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>