<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2f2f2f">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/bg_video_room" />

    <RelativeLayout
        android:id="@+id/activity_consult_room_big_video_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/activity_consult_room_mode_voice_tip_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_2f2f2f"
        android:gravity="center"
        android:text="@string/consult_room_voice_mode_voice_tip"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/activity_consult_room_members_leave_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_2f2f2f"
        android:gravity="center"
        android:textColor="@color/color_white"
        android:textSize="24sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/activity_consult_room_title_rl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_4c000000">

        <TextView
            android:id="@+id/activity_consult_room_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/consult_room_consult_num"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="8dp"
            android:src="@drawable/ic_white_logo" />

        <TextView
            android:id="@+id/activity_consult_room_read_record_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/activity_consult_room_num_tv"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/consult_room_read_record"
            android:textColor="@color/text_color_white_b3b3b3"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_consult_room_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_consult_room_title_rl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_size_18"/>

    <LinearLayout
        android:id="@+id/activity_consult_room_network_monitor_ll"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_consult_room_title_rl"
        android:background="@color/color_white"
        android:orientation="vertical">

        <WebView
            android:id="@+id/activity_consult_room_network_monitor_wv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none"
            android:layerType="software"
            android:visibility="visible" />

        <TextView
            android:id="@+id/activity_consult_room_attending_doctor_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/activity_consult_room_superior_doctor_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_16" />

        <Button
            android:id="@+id/activity_consult_room_exit_room_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/bg_btn_confirm_blue"
            android:text="@string/consult_room_exit_room"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_consult_room_bigVideo_info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_consult_room_title_rl"
        android:layout_toEndOf="@id/activity_consult_room_network_monitor_ll"
        android:layout_toRightOf="@id/activity_consult_room_network_monitor_ll"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/activity_consult_room_user_avatar_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_consult_room_user_avatar_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_big_video_super_expert" />

            <TextView
                android:id="@+id/activity_consult_room_user_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size_16" />

            <ImageView
                android:id="@+id/activity_consult_room_network_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_big_video_signal_good" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_consult_room_name_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_consult_room_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size_16" />

            <ImageView
                android:id="@+id/activity_consult_room_voice_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_big_video_voice" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_consult_room_hospital_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>

    <cn.longmaster.ihmonitor.view.ToastLayoutView
        android:id="@+id/activity_consult_room_toast_tlv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:clipChildren="false" />

    <LinearLayout
        android:id="@+id/activity_consult_room_small_window_ll"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_consulting_room_small_video"
        android:clickable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_consult_room_hide_show_video_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="12dp"
            android:src="@drawable/ic_small_video_arrow" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/activity_consult_room_small_video_ll"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:clickable="false"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </LinearLayout>
</RelativeLayout>
